@startuml

title __APP's Class Diagram__\n

  package com.example.ducks.screen {
    class Autorun {
    }
  }
  

  package com.example.ducks.screen {
    class BuildConfig {
    }
  }
  

  package com.example.ducks.screen {
    class Camera {
    }
  }
  

  package com.example.ducks.screen {
    class MainActivity {
    }
  }
  

  package com.example.ducks.screen {
    class Panel {
    }
  }
  

  package com.example.ducks.screen {
    class Search {
    }
  }
  

  package com.example.ducks.screen {
    interface Service {
    }
  }
  

  package com.example.ducks.screen {
    class Sync {
    }
  }
  

  package com.example.ducks.screen {
    class Timer {
    }
  }
  

  package com.example.ducks.screen {
    class Video {
    }
  }
  

  package com.example.ducks.screen {
    class VideoSurfaceView {
    }
  }
  

  Autorun -up-|> BroadcastReceiver
  Camera -up-|> AppCompatActivity
  Camera o-- OrientationListener : orientationListener
  MainActivity -up-|> AppCompatActivity
  Panel -up-|> Fragment
  Search -up-|> AppCompatActivity
  Sync -up-|> Service
  Sync o-- SyncThread : syncThread
  Timer -up-|> AppCompatActivity
  Video -up-|> SurfaceTextureListener
  Video -up-|> Activity
  VideoSurfaceView -up-|> Callback
  VideoSurfaceView -up-|> SurfaceView
  VideoSurfaceView o-- DrawThread : drawThread


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
